--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ dependencies = [
 requires-python = ">=3.8"
 readme = "README.md"
 license = {text = "MIT"}
+
+[project.scripts]
+merge-openapi = "merge_openapi.__main__:main"
+
 [project.optional-dependencies]
 
 [build-system]
